@@ -118,7 +118,7 @@ sync_log_buff_interval=10
 # default value is 60 seconds
 sync_binlog_buff_interval=60
 
-# thread stack size, should > 512KB
+# thread stack size, should >= 512KB
 # default value is 1MB
 thread_stack_size=1MB
 
