@@ -90,7 +90,7 @@ sync_log_buff_interval = 10
 # check storage server alive interval
 check_active_interval = 120
 
-# thread stack size, should > 512KB
+# thread stack size, should >= 512KB
 # default value is 1MB
 thread_stack_size=1MB
 
